@@ -1,3 +1,12 @@
+2012-01-01  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-sh.el (tramp-remote-path): Add "/opt/bin" and "/opt/sbin".
+	(tramp-find-shell): Rearrange implementation.
+	(tramp-find-inline-compress): Cache the compress commands in the
+	process cache.
+	(tramp-get-inline-compress): Read connection properties from the
+	process cache.
+
 2011-12-30  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-sh.el (tramp-open-connection-setup-interactive-shell):
